<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.punchtree</groupId>
	<artifactId>punchtree-util</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<name>PunchTree-Util</name>

	<repositories>
		<repository>
			<id>papermc</id>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>io.papermc.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.19.4-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<outputDirectory>${outputDirectory}</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>wagon-maven-plugin</artifactId>
				<version>1.0</version>
				<executions>
					<execution>
						<id>upload-assembly</id>
						<phase>install</phase>
						<goals>
							<goal>upload-single</goal>
						</goals>
						<configuration>
							<serverId>punchtree-ftp</serverId> <!-- references the server declaration -->
							<fromFile>${outputDirectory}/${project.build.finalName}.jar</fromFile>
							<url>${ftpHostPluginDirectory}</url>
							<toFile>${project.build.finalName}.jar</toFile>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<extensions>
			<!-- Enabling the use of FTP -->
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ftp</artifactId>
				<version>2.10</version>
			</extension>
		</extensions>
	</build>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Cxom Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/Cxom/PunchTree-Util</url>
		</repository>
	</distributionManagement>
</project>